ajustando valor total

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,7 @@
 .buttonsStyle{
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  padding-left: 90px;
+  padding-right: 90px;
 }
