--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
 <div class="buttonsStyle">
   <app-calories></app-calories>
   <app-carbo></app-carbo>
+  <app-protein></app-protein>
+  <app-total></app-total>
 </div>
 <app-foot></app-foot>
 </router-outlet>
