--- a/src/app/total/total.component.html
+++ b/src/app/total/total.component.html
@@ -1,1 +1,6 @@
-<p>total works!</p>
+<h1 class="total">Total Diário</h1>
+<ul class="lista">
+  <li>Calorias: <span> {{calories}} </span> </li>
+  <li>Carboidratos: <span> {{carbo}} </span> </li>
+  <li>Proteínas: <span> {{protein}} </span> </li>
+</ul>
